templates/gitea-frontend/deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-template
  namespace: apps
spec:
  ingressClassName: traefik
  rules:
    - host: frontend-template.thanaspapa.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-template
                port:
                  number: 80
